(executable
 (name main)
 (libraries brr reactor reactor_brr logs logs.lwt logs.browser js_of_ocaml
   js_of_ocaml-lwt lwt_react leaflet leaflet_contextmenu loadable xmlc xmppl
   xmppl_websocket xmppl.roster xmppl.disco xmppl.entity_capabilities xmppl.mam
   xmppl.pubsub ptime ptime.clock.jsoo rdf rdf_xml uuidm)
 (modes js))

(install
 (section share)
 (files
  ../../vendor/leaflet/leaflet.css
  (../../vendor/leaflet/images/layers-2x.png as images/layers-2x.png)
  (../../vendor/leaflet/images/layers.png as images/layers.png)
  (../../vendor/leaflet/images/marker-icon-2x.png as
    images/marker-icon-2x.png)
  (../../vendor/leaflet/images/marker-icon.png as images/marker-icon.png)
  (../../vendor/leaflet/images/marker-shadow.png as images/marker-shadow.png)
  ../../vendor/Leaflet.contextmenu/leaflet.contextmenu.css
  index.html
  sgraffito.svg
  (main.bc.js as geopub.js)
  style.css))
